# Chowder

./: .gitignore
backend/: .env.example  .gitignore  chowder.md  main.py  pyproject.toml
backend/app/: database.py
backend/app/agent/: chowder_agent.py  tools.py
backend/app/core/: config.py  logger.py
backend/app/models/: agent.py  db_models.py  food.py  kite.py  transaction.py  wallet.py
backend/app/routers/: intents.py
backend/smart-contract/: .env.example  .gitignore  README.md  hardhat.config.ts  package.json  pnpm-lock.yaml
backend/smart-contract/contracts/: KiteLogger.sol
backend/smart-contract/ignition/deployments/chain-2368/: deployed_addresses.json  journal.jsonl
backend/smart-contract/ignition/deployments/chain-2368/build-info/: solc-0_8_28-4f7eb4ffa412fd4e718f705099e8e788e2f99181.json
backend/smart-contract/ignition/modules/: KiteLogger.ts
backend/smart-contract/scripts/: deploy.ts
backend/smart-contract/test/: KiteLogger.ts
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  api.ts  constants.ts  index.css  types.ts
